--- a/mnist_classification.ipynb
+++ b/mnist_classification.ipynb
@@ -11,10 +11,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Question 2 : MNIST"
+    "#  MNIST"
    ]
   },
   {
