--- a/statlog_classification.ipynb
+++ b/statlog_classification.ipynb
@@ -12,10 +12,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Question 1 : Statlog"
+    "#  Statlog"
    ]
   },
   {
